--- a/HCore-Identity/Resources/Messages.resx
+++ b/HCore-Identity/Resources/Messages.resx
@@ -282,6 +282,9 @@
   <data name="password_confirmation" xml:space="preserve">
     <value>Confirm password</value>
   </data>
+  <data name="pin" xml:space="preserve">
+    <value>PIN</value>
+  </data>
   <data name="notification_culture" xml:space="preserve">
     <value>Notification language</value>
   </data>
