--- a/HCore-Translations/Resources/Messages.resx
+++ b/HCore-Translations/Resources/Messages.resx
@@ -204,6 +204,9 @@
   <data name="pin_missing" xml:space="preserve">
     <value>The PIN is missing</value>
   </data>
+  <data name="pin_too_short" xml:space="preserve">
+    <value>The PIN is too short</value>
+  </data>
   <data name="pin_too_long" xml:space="preserve">
     <value>The PIN is too long</value>
   </data>
@@ -284,6 +287,9 @@
   </data>
   <data name="invalid_credentials" xml:space="preserve">
     <value>The user credentials are not valid</value>
+  </data>
+  <data name="pin_login_requires_registration" xml:space="preserve">
+    <value>Before you can log in with a PIN, you must first register your user account with an email address and password.</value>
   </data>
   <data name="issuer_invalid" xml:space="preserve">
     <value>The issuer is invalid</value>
