Avoid reuse of PIN

--- a/HCore-Translations/Resources/Messages.de.resx
+++ b/HCore-Translations/Resources/Messages.de.resx
@@ -210,6 +210,9 @@
   <data name="pin_too_long" xml:space="preserve">
     <value>Der PIN ist zu lang</value>
   </data>
+  <data name="pin_already_in_use" xml:space="preserve">
+    <value>Der PIN wird bereits verwendet. Bitte wählen Sie einen anderen PIN</value>
+  </data>
   <data name="identity_token_missing" xml:space="preserve">
     <value>Der Identitätscode fehlt</value>
   </data>
