--- a/HCore-Translations/Resources/Messages.resx
+++ b/HCore-Translations/Resources/Messages.resx
@@ -210,6 +210,9 @@
   <data name="pin_too_long" xml:space="preserve">
     <value>The PIN is too long</value>
   </data>
+  <data name="pin_already_in_use" xml:space="preserve">
+    <value>The PIN is already in use. Please choose another PIN</value>
+  </data>
   <data name="identity_token_missing" xml:space="preserve">
     <value>The identity token is missing</value>
   </data>
